[gd_scene load_steps=7 format=2]

[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/outputs/motor_output_LATE.svg" type="Texture" id=2]
[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/outputs/MotorOut.gd" type="Script" id=4]
[ext_resource path="res://elements/dial/Dial.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 213, 173 )

[node name="MotorOut" type="Node2D"]
script = ExtResource( 4 )

[node name="sequencer" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ModuleDragger" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
position = Vector2( 204, 175 )
shape = SubResource( 1 )

[node name="JackIn" parent="." instance=ExtResource( 1 )]
position = Vector2( 2.00028, 105 )

[node name="JackIn2" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 175 )

[node name="JackIn3" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 245 )

[node name="JackIn4" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 315 )

[node name="JackIn5" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 324.427, 348 )
rotation = -1.57079
default_state = 1.0

[node name="SpeedDial" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 324.141, 203.549 )
min_angle = -180.0
rounding = 45.0
init_rot = -180.0
